crates/alloy-provider/tests/trybuild/no_signing_provider.stderr
error[E0277]: the trait bound `RpcAlloyProvider: SigningProvider` is not satisfied
 --> tests/trybuild/no_signing_provider.rs:6:19
  |
6 |     assert_impl::<RpcAlloyProvider>();
  |                   ^^^^^^^^^^^^^^^^ the trait `SigningProvider` is not implemented for `RpcAlloyProvider`
  |
note: required by a bound in `assert_impl`
 --> tests/trybuild/no_signing_provider.rs:5:23
  |
5 |     fn assert_impl<T: SigningProvider>() {}
  |                       ^^^^^^^^^^^^^^^ required by this bound in `assert_impl`
